# kingpin

./: CITATION.bib  LICENSE  README.md  pyproject.toml  setup.cfg
.github/workflows/: python-app.yml
docs/: requirements.txt
docs/source/: api.rst  conf.py  examples.rst  index.rst  usage.rst
example/: motorcycle.py  motorcycle.txt  step_functions.py
src/kingpin/: __init__.py  alias.py  draw.py  kingpin.py  model.py  plot.py  prior.py  proposal.py  recorder.py  rjmcmc.py  stack.py  tgp.py  tree.py
test/: test.py  test_model.py  test_prior.py  test_proposal.py  test_recorder.py  test_tgp.py  test_tree.py
