[metadata]
name = kingpin
version = 0.0.1
author = Andrew Fowlie
author_email = andrew.j.fowlie@gmail.com
description = Treed Gaussian Process
long_description = file: README.md
long_description_content_type = text/markdown
url = =
project_urls =
    Bug Tracker = 
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

install_requires =
    arviz
    binarytree
    celerite2
    click
    ezcurses
    joblib
    matplotlib
    numpy
    scipy
    tqdm

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    kingpin = kingpin.kingpin:cli
